style.css
/* Import Muli font. */
@import url('https://fonts.googleapis.com/css?family=Muli:300,300i,700,700i');
html,body {
    margin: 0;
    padding: 0;
    background: #eee;
    font-family: 'Muli', sans-serif;
    font-weight: 300;
}
ul {
    margin: 0;
    padding: 0;
    list-style: none;
}
ul li:first-child {
    border-top: 1px #ccc solid;
    border-radius: 5px 5px 0px 0px;
    border-bottom: none;
}
ul li:last-child {
    border-radius: 0px 0px 5px 5px;
}
ul li {
    padding: 10px 15px; 
    border: 1px #ccc solid;
    border-top: none;
}

